--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -1,3 +1,5 @@
-#index:
-#    path: /
-#    controller: App\Controller\DefaultController::index
+CreateRol:
+    path: /Role/create/
+    controller: App\Infrastructure\Controller\RoleController::createRole
+    methods: [GET]
+
