--- a/config/services.yaml
+++ b/config/services.yaml
@@ -34,3 +34,7 @@ services:
 
     App\Domain\Model\Role\RoleRepository:
         alias: app.role_repository
+
+    App\EventListener\ExceptionListener:
+                tags:
+                    - { name: kernel.event_listener, event: kernel.exception }
