--- a/config/services.yaml
+++ b/config/services.yaml
@@ -34,3 +34,21 @@ services:
 
     App\Domain\Model\Role\RoleRepository:
         alias: app.role_repository
+
+    app.department_repository:
+        class: Doctrine\ORM\EntityRepository
+        factory: ['@doctrine.orm.default_entity_manager', getRepository]
+        arguments:
+            - App\Domain\Model\Department\Department
+
+    App\Domain\Model\Department\DepartmentRepository:
+        alias: app.department_repository
+
+    app.parentdepartment_repository:
+            class: Doctrine\ORM\EntityRepository
+            factory: ['@doctrine.orm.default_entity_manager', getRepository]
+            arguments:
+                - App\Domain\Model\ParentDepartment\ParentDepartment
+
+    App\Domain\Model\ParentDepartment\ParentDepartmentRepository:
+        alias: app.parentdepartment_repository
