Insert in departament Entitys

--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -8,3 +8,13 @@ UpdateRol:
     controller: App\Infrastructure\Controller\RoleController::updateRole
     methods: [GET]
 
+CreateDepartment:
+    path: /Department/create/
+    controller: App\Infrastructure\Controller\DepartmentController::createDepartment
+    methods: [GET]
+
+CreateParentDepartment:
+    path: /ParentDepartment/create/
+    controller: App\Infrastructure\Controller\ParentDepartmentController::createParentDepartment
+    methods: [GET]
+
