--- a/config/services.yaml
+++ b/config/services.yaml
@@ -35,6 +35,16 @@ services:
     App\Domain\Model\Role\RoleRepository:
         alias: app.role_repository
 
+    app.manager_repository:
+        class: Doctrine\ORM\EntityRepository
+        factory: ['@doctrine.orm.default_entity_manager', getRepository]
+        arguments:
+            - App\Domain\Model\Manager\Manager
+
+    App\Domain\Model\Manager\ManagerRepository:
+        alias: app.manager_repository
+
+
     App\EventListener\ExceptionListener:
                 tags:
                     - { name: kernel.event_listener, event: kernel.exception }
