--- a/.gitignore
+++ b/.gitignore
@@ -8,9 +8,8 @@
 ###> symfony/web-server-bundle ###
 /.web-server-pid
 ###< symfony/web-server-bundle ###
+.idea/
 
-###> symfony/phpunit-bridge ###
-.phpunit
+###> phpunit/phpunit ###
 /phpunit.xml
-###< symfony/phpunit-bridge ###
-.idea/workspace.xml
+###< phpunit/phpunit ###
