--- a/composer.json
+++ b/composer.json
@@ -17,8 +17,8 @@
         "whiteoctober/tcpdf-bundle": "^1.0"
     },
     "require-dev": {
+        "phpunit/phpunit": "^7.1",
         "symfony/dotenv": "^4.0",
-        "symfony/phpunit-bridge": "^4.0",
         "symfony/profiler-pack": "^1.0",
         "symfony/web-server-bundle": "^4.0"
     },
