--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -41,3 +41,18 @@ CheckEmail:
     path: /Manager/checkEmail/
     controller: App\Infrastructure\Controller\ManagerController::checkEmail
     methods: [GET]
+
+CreateClotheCategory:
+    path: /ClotheCategory/create/
+    controller: App\Infrastructure\Controller\ClotheCategoryController::createClotheCategory
+    methods: [GET]
+
+UpdateClotheCategory:
+    path: /ClotheCategory/update/
+    controller: App\Infrastructure\Controller\ClotheCategoryController::updateClotheCategory
+    methods: [GET]
+
+CreateContract:
+    path: /Contract/create/
+    controller: App\Infrastructure\Controller\ContractController::createContract
+    methods: [GET]
