--- a/config/services.yaml
+++ b/config/services.yaml
@@ -62,6 +62,33 @@ services:
     App\Domain\Model\Manager\ManagerRepository:
         alias: app.manager_repository
 
+    app.clothecategory_repository:
+        class: Doctrine\ORM\EntityRepository
+        factory: ['@doctrine.orm.default_entity_manager', getRepository]
+        arguments:
+            - App\Domain\Model\ClotheCategory\ClotheCategory
+
+    App\Domain\Model\ClotheCategory\ClotheCategoryRepository:
+        alias: app.clothecategory_repository
+
+    app.contract_repository:
+        class: Doctrine\ORM\EntityRepository
+        factory: ['@doctrine.orm.default_entity_manager', getRepository]
+        arguments:
+            - App\Domain\Model\Contract\Contract
+
+    App\Domain\Model\Contract\ContractRepository:
+        alias: app.contract_repository
+
+    app.user_repository:
+        class: Doctrine\ORM\EntityRepository
+        factory: ['@doctrine.orm.default_entity_manager', getRepository]
+        arguments:
+            - App\Domain\Model\User\User
+
+    App\Domain\Model\User\UserRepository:
+        alias: app.user_repository
+
     App\EventListener\ExceptionListener:
                 tags:
                     - { name: kernel.event_listener, event: kernel.exception }
