--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -52,6 +52,11 @@ UpdateManager:
     controller: App\Infrastructure\Controller\ManagerController::updateManager
     methods: [GET]
 
+DeleteManager:
+    path: /Manager/delete/
+    controller: App\Infrastructure\Controller\ManagerController::deleteManager
+    methods: [GET]
+
 CreateClotheCategory:
     path: /ClotheCategory/create/
     controller: App\Infrastructure\Controller\ClotheCategoryController::createClotheCategory
