--- a/config/services.yaml
+++ b/config/services.yaml
@@ -89,6 +89,15 @@ services:
     App\Domain\Model\User\UserRepository:
         alias: app.user_repository
 
+    app.clothe_repository:
+        class: Doctrine\ORM\EntityRepository
+        factory: ['@doctrine.orm.default_entity_manager', getRepository]
+        arguments:
+            - App\Domain\Model\Clothe\Clothe
+
+    App\Domain\Model\Clothe\ClotheRepository:
+        alias: app.clothe_repository
+
     App\EventListener\ExceptionListener:
                 tags:
                     - { name: kernel.event_listener, event: kernel.exception }
