--- a/.env.dist
+++ b/.env.dist
@@ -15,3 +15,7 @@ APP_SECRET=ef9013b1c8932b42ce3f185d66133434
 # Configure your db driver and server_version in config/packages/doctrine.yaml
 DATABASE_URL=mysql://db_user:db_password@127.0.0.1:3306/db_name
 ###< doctrine/doctrine-bundle ###
+
+###> nelmio/cors-bundle ###
+CORS_ALLOW_ORIGIN=^https?://localhost:?[0-9]*$
+###< nelmio/cors-bundle ###
