--- a/composer.json
+++ b/composer.json
@@ -6,6 +6,7 @@
         "ext-iconv": "*",
         "beberlei/assert": "^2.9",
         "doctrine/orm": "^2.6",
+        "nelmio/cors-bundle": "^1.5",
         "ramsey/uuid": "^3.7",
         "symfony/console": "^4.0",
         "symfony/flex": "^1.0",
