--- a/composer.json
+++ b/composer.json
@@ -6,6 +6,7 @@
         "ext-iconv": "*",
         "beberlei/assert": "^2.9",
         "doctrine/orm": "^2.6",
+        "league/tactician-bundle": "^1.1",
         "nelmio/cors-bundle": "^1.5",
         "ramsey/uuid": "^3.7",
         "symfony/console": "^4.0",
@@ -64,7 +65,7 @@
     "extra": {
         "symfony": {
             "id": "01CBVAS07T7QWJY9D85DYDNYTT",
-            "allow-contrib": false
+            "allow-contrib": true
         }
     }
 }
