Fin dia 21 mayo 2018

--- a/config/routes/context/user.yaml
+++ b/config/routes/context/user.yaml
@@ -2,3 +2,8 @@ CreateUser:
     path: /User/create/
     controller: App\Infrastructure\Controller\UserController::createUser
     methods: [GET]
+
+UpdateUser:
+    path: /User/update/
+    controller: App\Infrastructure\Controller\UserController::updateUser
+    methods: [GET]
