GetAll ClotheCategory para jabry

--- a/config/routes/context/clotheCategory.yaml
+++ b/config/routes/context/clotheCategory.yaml
@@ -12,3 +12,8 @@ DeleteClotheCategory:
     path: /ClotheCategory/delete/
     controller: App\Infrastructure\Controller\ClotheCategoryController::deleteClotheCategory
     methods: [GET]
+
+GetClotheCategory:
+    path: /ClotheCategory/
+    controller: App\Infrastructure\Controller\ClotheCategoryController::all
+    methods: [GET]
