Medio dia 23 mayo 2018

--- a/config/services/context/user.yaml
+++ b/config/services/context/user.yaml
@@ -12,3 +12,8 @@ services:
                 class: App\Application\User\Update\UserUpdate
                 tags:
                     - { name: tactician.handler, command: App\Application\User\Update\UserUpdateCommand }
+
+    User.delete_handler:
+                class: App\Application\User\Delete\UserDelete
+                tags:
+                    - { name: tactician.handler, command: App\Application\User\Delete\UserDeleteCommand }
