--- a/config/routes/context/user.yaml
+++ b/config/routes/context/user.yaml
@@ -1,9 +1,14 @@
 CreateUser:
     path: /User/create/
     controller: App\Infrastructure\Controller\UserController::createUser
-    methods: [GET]
+    methods: [POST]
 
 UpdateUser:
     path: /User/update/
     controller: App\Infrastructure\Controller\UserController::updateUser
-    methods: [GET]
+    methods: [POST]
+
+DeleteUser:
+    path: /User/delete/
+    controller: App\Infrastructure\Controller\UserController::deleteUser
+    methods: [POST]
