fin dia 24 de mayo de 2018 todo el dia para hacer el join

--- a/config/services/context/user.yaml
+++ b/config/services/context/user.yaml
@@ -22,3 +22,8 @@ services:
                 class: App\Application\User\GetByUuid\UserGetByUuid
                 tags:
                     - { name: tactician.handler, command: App\Application\User\GetByUuid\UserGetByUuidCommand }
+
+    User.filter_handler:
+                class: App\Application\User\Filter\UserFilter
+                tags:
+                    - { name: tactician.handler, command: App\Application\User\Filter\UserFilterCommand }
