--- a/config/routes/context/order.yaml
+++ b/config/routes/context/order.yaml
@@ -7,3 +7,13 @@ DeleteOrder:
     path: /Order/delete/
     controller: App\Infrastructure\Controller\OrderController::deleteOrder
     methods: [POST]
+
+GetAllOrders:
+    path: /Order/getAll/
+    controller: App\Infrastructure\Controller\OrderController::getAllOrders
+    methods: [GET]
+
+GetUserOrders:
+    path: /Order/getUserOrders/
+    controller: App\Infrastructure\Controller\OrderController::getByUserID
+    methods: [GET]
