--- a/config/packages/league_tactician.yaml
+++ b/config/packages/league_tactician.yaml
@@ -12,4 +12,6 @@ tactician:
 #                - tactician.middleware.locking
 # Doctrine transactional middleware, requires additional package - https://github.com/thephpleague/tactician-doctrine
 #                - tactician.middleware.doctrine
+                - App\MiddelWare\Shared\FillFactory
+                - App\MiddelWare\SecurityMiddelware
                 - tactician.middleware.command_handler
