--- a/config/services.yaml
+++ b/config/services.yaml
@@ -165,6 +165,24 @@ services:
     App\Domain\Model\OrderDetails\OrderDetailsRepository:
         alias: app.orderDetails_repository
 
+    app.log_user_repository:
+            class: Doctrine\ORM\EntityRepository
+            factory: ['@doctrine.orm.default_entity_manager', getRepository]
+            arguments:
+                - App\Domain\Model\LogUser\LogUser
+
+    App\Domain\Model\LogUser\LogUserRepository:
+        alias: app.log_user_repository
+
+    app.log_manager_repository:
+            class: Doctrine\ORM\EntityRepository
+            factory: ['@doctrine.orm.default_entity_manager', getRepository]
+            arguments:
+                - App\Domain\Model\LogManager\LogManager
+
+    App\Domain\Model\LogManager\LogManagerRepository:
+        alias: app.log_manager_repository
+
 imports:
     - { resource: ./services/context/manager.yaml }
     - { resource: ./services/context/contract.yaml }
